WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63777
location.replace with a hash change does not update the history entry
https://bugs.webkit.org/show_bug.cgi?id=63777
Summary
location.replace with a hash change does not update the history entry
Mihai Parparita
Reported
2011-06-30 18:20:00 PDT
location.replace with a hash change does not update the history entry
Attachments
Patch
(6.56 KB, patch)
2011-06-30 18:21 PDT
,
Mihai Parparita
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-01
(1.31 MB, application/zip)
2011-06-30 21:40 PDT
,
WebKit Review Bot
no flags
Details
Patch
(6.60 KB, patch)
2011-06-30 22:18 PDT
,
Mihai Parparita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mihai Parparita
Comment 1
2011-06-30 18:21:31 PDT
Created
attachment 99411
[details]
Patch
Mihai Parparita
Comment 2
2011-06-30 18:23:40 PDT
The test case passes in Firefox, I will verify the behavior in IE shortly. Fixes
http://crbug.com/86000
and
http://crbug.com/78485
.
Mihai Parparita
Comment 3
2011-06-30 18:25:10 PDT
***
Bug 57979
has been marked as a duplicate of this bug. ***
Mihai Parparita
Comment 4
2011-06-30 18:27:50 PDT
***
Bug 59195
has been marked as a duplicate of this bug. ***
Mihai Parparita
Comment 5
2011-06-30 18:35:45 PDT
IE behaves the same as Firefox.
WebKit Review Bot
Comment 6
2011-06-30 21:40:20 PDT
Comment on
attachment 99411
[details]
Patch
Attachment 99411
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8959920
New failing tests: fast/loader/crash-replacing-location-before-load.html
WebKit Review Bot
Comment 7
2011-06-30 21:40:25 PDT
Created
attachment 99424
[details]
Archive of layout-test-results from ec2-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-01 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Mihai Parparita
Comment 8
2011-06-30 22:18:03 PDT
Created
attachment 99426
[details]
Patch
Darin Fisher (:fishd, Google)
Comment 9
2011-06-30 22:53:27 PDT
Comment on
attachment 99426
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=99426&action=review
R=me
> Source/WebCore/loader/HistoryController.cpp:514 > + if (m_currentItem) {
I notice that recursiveUpdateForSameDocumentNavigation() can assign m_currentItem if there is a non-null m_provisionalItem. I just want to make sure that it makes sense to work with m_currentItem after calling recursiveUpdateForSameDocumentNavigation() versus before.
Mihai Parparita
Comment 10
2011-07-01 14:18:55 PDT
(In reply to
comment #9
)
> I notice that recursiveUpdateForSameDocumentNavigation() can assign m_currentItem if > there is a non-null m_provisionalItem. I just want to make sure that it makes sense > to work with m_currentItem after calling recursiveUpdateForSameDocumentNavigation() > versus before.
I think so, it seems reasonable to want the the current history item to reflect the current URL, instead of having those changes be clobbered when a provisional load is committed.
WebKit Review Bot
Comment 11
2011-07-01 15:02:57 PDT
Comment on
attachment 99426
[details]
Patch Clearing flags on attachment: 99426 Committed
r90281
: <
http://trac.webkit.org/changeset/90281
>
WebKit Review Bot
Comment 12
2011-07-01 15:03:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug