2011-07-01  Mihai Parparita  <mihaip@chromium.org>

Reviewed by Darin Fisher.

        location.replace with a hash change does not update the history entry
        https://bugs.webkit.org/show_bug.cgi?id=63777

        * fast/history/location-replace-hash-expected.txt: Added.
        * fast/history/location-replace-hash.html: Added.
        * fast/history/resources/location-replace-hash-1.html: Added.
        * fast/history/resources/location-replace-hash-2.html: Added.
2011-07-01  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Darin Fisher.

        location.replace with a hash change does not update the history entry
        https://bugs.webkit.org/show_bug.cgi?id=63777

        location.replace('#foo') would not update the HistoryItem with the
        new URL, thus navigating back to the page would use the previous
        URL, even though it had been replaced. Make
        HistoryController::updateForSameDocumentNavigation mirror
        HistoryController::replaceState.

        Test: fast/history/location-replace-hash.html

        * loader/HistoryController.cpp:
        (WebCore::HistoryController::updateForSameDocumentNavigation):

Canonical link: https://commits.webkit.org/79548@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90281 268f45cc-cd09-0410-ab3c-d52691b4dbfc